crates/yokectl/tests/snapshots/bindings_json__default.snap
---
source: crates/yokectl/tests/bindings_json.rs
expression: stdout
---
{
  "sub_profiles": [
    {
      "bindings": [
        {
          "input": "left",
          "modifier": "normal",
          "output": "mouse_left"
        }
      ],
      "channel": "usb",
      "mode": "Mouse",
      "name": "Main",
      "sub_mode": "Normal"
    }
  ]
}
